# coral-cubed-flight

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  setup.sh  west.yml
setup_wsl/: WSL_CDH_FLASH_DEMO_ALL_IN_ONE_SETUP.md  setup_windows.ps1  setup_wsl.md
src/CDH/blink/: blink.c
src/CDH/documentation/: README.md
src/CDH/gpio/: Makefile  gpio.c
src/CDH/scripts/: README.md
src/CDH/scripts/tx/: tx_example.py
src/CDH/uart/: uart.c
src/CDH/uart/support/: README.md
src/COM/: README.md
src/COM/scripts/: sourcefile.txt
src/COM/scripts/tx/: README.md
src/COM/uart/: uart.c
src/COM/uart/support/: com.c
src/TPU/: CMakeLists.txt  blink.cc
src/examples/CDH/: README.md  cdh_main.c  flashtool.sh  prj.conf
src/examples/CDH/apps/blink/: CMakeLists.txt  blink.c
src/examples/CDH/apps/gpio/: CMakeLists.txt  gpio.c
src/examples/CDH/apps/uart/: CMakeLists.txt  uart.c
src/examples/CDH/blink/: Makefile  README.md  blink.elf  blink.hex  generated.stm32l496rgt3.ld
src/examples/CDH/boards/coral/coral_stm32/: coral_stm32.dts  coral_stm32_defconfig
src/examples/CDH/gpio/: README.md
src/examples/CDH/libs/: cdh.c  cdh.h
src/examples/CDH/scripts/py-tab/: README.md
src/examples/CDH/tools/: sourcefile.txt
src/examples/CDH/uart/: Makefile  README.md
src/examples/COM/: COM.md  README.md  flashtool.sh  power_measure.py  prj.conf
src/examples/COM/apps/blink/: CMakeLists.txt  blink.c
src/examples/COM/apps/gpio/: CMakeLists.txt  gpio.c
src/examples/COM/apps/uart/: CMakeLists.txt  uart.c
src/examples/COM/blink/: Makefile  README.md  blink.c  blink.elf  blink.hex
src/examples/COM/boards/coral/coral_nrf52833/: coral_nrf52833.dts
src/examples/COM/documentation/: README.md
src/examples/COM/gpio/: Makefile  README.md  gpio.c
src/examples/COM/libs/: com.c  radio.c  uart.c
src/examples/COM/scripts/: README.md  setup_dependencies.sh
src/examples/COM/scripts/rx/: README.md
src/examples/COM/tools/: stlink.cfg
src/examples/COM/tools/SDR/: recieve_noise.grc  recieve_noise.py
src/examples/COM/uart/: Makefile  README.md
src/examples/TPU/: blink.cc
src/main/: CDH_QSPI_Flash_Demo_Report.md  DEMO.md
src/main/CDH/: CMakeLists.txt  Makefile  README.md  WSL_FLASH_DEMO_STEPS.md  app.overlay  cdh_main.c  flash_cdh_flash_demo_wsl.sh  flashtool.sh  prj.conf
src/main/CDH/boards/coral/coral_stm32/: coral_stm32.dts  coral_stm32_defconfig
src/main/CDH/libs/: cdh.c  cdh.h  tab.c  tab.h
src/main/CDH/tools/: sourcefile.txt
src/main/CDH_flash_demo/: CMakeLists.txt  README.md  prj.conf
src/main/CDH_flash_demo/src/: main.c
src/main/CDH_flash_demo_platformio/: README.md  build_log.txt  platformio.ini
src/main/CDH_flash_demo_platformio/boards/coral/coral_stm32/: board.cmake  board.yml  coral_stm32.dts
src/main/CDH_flash_demo_platformio/src/: main.c
src/main/CDH_flash_demo_platformio/zephyr/: prj.conf
src/main/CDH_flash_demo_platformio_bundle/: PLATFORMIO_CDH_FLASH_DEMO_SETUP.md
src/main/CDH_flash_demo_platformio_bundle/CDH_flash_demo_platformio/: platformio.ini
src/main/CDH_flash_demo_platformio_bundle/CDH_flash_demo_platformio/zephyr/: CMakeLists.txt
src/main/CDH_image_demo/: cdh_img_demo.py  platformio.ini  prj.conf
src/main/CDH_image_demo/boards/: coral_stm32.json
src/main/CDH_image_demo/boards/coral/coral_stm32/: Kconfig.coral_stm32  coral_stm32.dts  coral_stm32_defconfig
src/main/CDH_image_demo/src/: main.c
src/main/CDH_image_demo/zephyr/: CMakeLists.txt  prj.conf
src/main/COM/: CMakeLists.txt  COM.c  Makefile  README.md  app.overlay  com.elf  com.hex  com_main.c  flashtool.sh  generated.nrf52833qdaa.ld  nrf_gpio_registers.md  power_measure.py  prj.conf
src/main/COM/boards/coral/coral_nrf52833/: Kconfig.coral_nrf52833  board.cmake  board.yml  coral_nrf52833.dts
src/main/COM/boards/coral_nrf52833/: Kconfig.board  Kconfig.defconfig  coral_nrf52833.dts  coral_nrf52833_defconfig
src/main/COM/libs/: com.c  com.h  radio.c  radio.h  radio_test.c  tab.c  tab.h  uart.c
src/main/COM/tools/SDR/: recieve_noise.grc  recieve_noise.py
src/main/GND/: README.md  demo.py
src/main/GND/Dev/: api.py  demo.py  gui.py  msg_id.json  requirements.txt  run.sh  run_api.sh
src/main/GND/Dev/rx/: rx_example.py
src/main/GND/Dev/utils/: path_utils.py  tab.py
src/main/GND/station/: CMakeLists.txt  README.md  flashtool.sh  gnd_main.c  prj.conf
src/main/GND/station/boards/coral/coral_nrf52833/: coral_nrf52833-pinctrl.dtsi  coral_nrf52833.dts
src/main/GND/station/libs/: gnd.c  gnd.h  radio.c  tab.c  tab.h  uart.c  uart.h
src/main/GND/station/tools/SDR/: recieve_noise.grc  recieve_noise.py
src/main/GND/tx/: tx_example.py
src/main/GND/utils/: tab.py
src/main/TPU/: CMakeLists.txt  README.md  build_log.txt  configs.h  coral_main.cc  demo.cc  flashtool.sh
src/main/TPU/images/: denby.rgb  img_converter.py  pirate_denby.rgb  regent_denby.rgb
src/main/TPU/libs/: inference.cc  inference.h  tab.c  tab.h  uart.cc  uart.h
